# DeepRead

./: README.md  deepread.py  pyproject.toml
agent/: cli.py  llm.py  runner.py
demo/TradingAgent/: TradingAgent.json  TradingAgent_corpus.json
demo/金山办公2023年报/: 11724-金山办公：金山办公2023年年度报告.json  11724-金山办公：金山办公2023年年度报告_corpus.json
index/: __init__.py  ingest.py  pdf_parser.py
prompt/: system.py
tool/: corpus.py  hybrid_search.py  retrieval.py  schema.py  semantic_retrieval.py  vector_search.py
