[project]
name = "deepread"
version = "0.1.0"
description = "DeepRead: Document-structure-aware RAG agent"
requires-python = ">=3.10"

dependencies = [
    "requests>=2.31",
    "numpy>=1.24",
    "httpx>=0.27",
    "pydantic>=2.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agent*", "index*", "tool*", "prompt*"]
